--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "gulp-concat": "^2.6.1",
     "gulp-imagemin": "^7.1.0",
     "gulp-sass": "^4.0.2",
+    "gulp-w3c-css": "^2.0.0",
     "imagemin-guetzli": "^2.0.0",
     "imagemin-mozjpeg": "^8.0.0",
     "node-sass": "^4.13.1"
